--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/nicopina/L-infini-2.0#readme",
   "dependencies": {
     "axios": "^1.1.3",
+    "boostrap": "^2.0.0",
     "express": "^4.18.2",
     "formik": "^2.2.9",
     "morgan": "^1.10.0",
