--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "@emotion/styled": "^11.10.4",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.9",
+    "@mui/joy": "^5.0.0-alpha.50",
     "@mui/material": "^5.10.10",
     "axios": "^1.1.3",
     "formik": "^2.2.9",
+    "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2"
