--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "boostrap": "^2.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "formik": "^2.2.9",
     "morgan": "^1.10.0",
