--- a/client/package.json
+++ b/client/package.json
@@ -14,16 +14,17 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.9",
     "@mui/joy": "^5.0.0-alpha.50",
-    "axios": "^1.1.3",
-    "formik": "^2.2.9",
-    "nodemon": "^2.0.20",
-    "react-router-dom": "^6.4.2",
     "@mui/material": "^5.10.10",
     "@mui/styled-engine-sc": "^5.10.6",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "boxicons": "^2.1.4",
+    "esbuild": "^0.15.13",
+    "formik": "^2.2.9",
+    "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "react-transition-group": "^4.4.5",
     "reactstrap": "^9.1.4",
     "styled-components": "^5.3.6"
