--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/joy": "^5.0.0-alpha.50",
     "@mui/material": "^5.10.10",
     "@mui/styled-engine-sc": "^5.10.6",
+    "@mui/styles": "^5.10.10",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "boxicons": "^2.1.4",
