--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "homepage": "https://github.com/nicopina/L-infini-2.0#readme",
   "dependencies": {
     "axios": "^1.1.3",
+    "bcrypt": "^5.1.0",
     "boostrap": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-jwt": "^7.7.7",
     "formik": "^2.2.9",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
