--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.2",
+    "sweetalert": "^2.1.2"
   }
 }
