--- a/package.json
+++ b/package.json
@@ -27,17 +27,21 @@
     "@mui/x-data-grid": "^5.17.11",
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "boostrap": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^7.7.7",
     "formik": "^2.2.9",
+    "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "react-router-dom": "^6.4.2",
-    "sweetalert": "^2.1.2",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "sweetalert": "^2.1.2"
   }
 }
