--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.2.2",
     "boxicons": "^2.1.4",
     "esbuild": "^0.15.13",
+    "events": "^3.3.0",
     "formik": "^2.2.9",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
