--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-onesignal": "^2.0.4",
+    "react-push-notification": "^1.3.0",
     "react-router-dom": "^6.4.2",
     "react-transition-group": "^4.4.5",
     "reactstrap": "^9.1.4",
