--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nodemon": "^2.0.20",
     "react-router-dom": "^6.4.2",
     "styled-components": "^5.3.6",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "tzdata": "^1.0.36"
   }
 }
