--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite build && vite preview "
+    "start": "vite build"
   },
   "dependencies": {
     "@date-io/date-fns": "^2.16.0",
