--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite build"
+    "start": "vite build && vite preview"
   },
   "dependencies": {
     "@date-io/date-fns": "^2.16.0",
