--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-onesignal": "^2.0.4",
     "react-push-notification": "^1.3.0",
     "react-router-dom": "^6.4.2",
