--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "boxicons": "^2.1.4",
+    "chart.js": "^4.0.1",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
     "emailjs-com": "^3.2.0",
@@ -36,6 +37,7 @@
     "moment": "^2.29.4",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-onesignal": "^2.0.4",
